# exocore

./: Cargo.toml
clients/ios/swift/: exocore.h
clients/ios/swift/protos/exocore/apps/: manifest.pb.swift
clients/ios/swift/protos/exocore/core/: auth.pb.swift  config.pb.swift  node.pb.swift
clients/ios/swift/protos/exocore/index/: entity.pb.swift  mutation.pb.swift  options.pb.swift  query.pb.swift
clients/ios/swift/protos/exocore/store/: entity.pb.swift  mutation.pb.swift  options.pb.swift  query.pb.swift
clients/ios/swift/protos/exocore/test/: test.pb.swift
clients/web/protos/: index.d.ts  index.js
clients/web/tsc/: index.d.ts  index.js  index.js.map
clients/web/wasm/: exocore_client_web.d.ts  exocore_client_web_bg.d.ts  exocore_client_web_bg.js  exocore_client_web_bg.wasm  exocore_client_web_bg.wasm.d.ts
core/: Cargo.toml
exo/: Cargo.toml
utils/: publish.sh
