[package]
name = "exocore"
description = "Distributed applications framework"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
repository = "https://github.com/appaquet/exocore"
license = "MIT"

[workspace]
members = [
  "exo",
  "index",
  "data",
  "common",
  "schema",
  "transport",
  "clients/wasm",
  "clients/android",
  "clients/ios",
]

